--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 }
 
 .first-part-one button {
-    background-color: rgb(228, 33, 91);
+    background-color: rgb(255, 103, 149);
     border: none;
     color: aliceblue;
     padding: 12px 25px;
@@ -115,5 +115,42 @@
 }
 .second-part-pro h4{
     color: rgb(46, 45, 45);
-
 }
+.third-part{
+    width: 100%;
+    height: 70%;
+    background-color: rgb(255, 241, 241);
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 130px;
+    align-items: center;
+    color: rgb(46, 45, 45);
+}
+.third-part-1{
+    position: relative;
+    left: 15%;
+}
+.third-part-1 h2{
+    font-size: 1.8em;
+    padding-bottom: 15px;
+}
+.third-part-1 p{
+    font-size: 13px;
+    color: rgb(148, 144, 144);
+    font-family: 'Roboto', sans-serif;
+    padding-bottom: 20px;
+    text-align: center;
+}
+.third-part-1 button {
+    background-color: rgb(255, 103, 149);
+    border: none;
+    color: aliceblue;
+    padding: 12px 25px;
+    border-radius: 5px;
+    position: relative;
+    left: 35%;
+}
+.third-part-2{
+    position: relative;
+    right: 10%;
+} 
