--- a/style.css
+++ b/style.css
@@ -154,3 +154,26 @@
     position: relative;
     right: 10%;
 } 
+.forth-part{
+    padding: 40px 130px;
+    text-align: center;
+}
+.forth-part-pro{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 40px 150px;
+    gap: 16px;
+}
+.forth-part h2 {
+    padding-top: 50px;
+    padding-bottom: 20px;
+    color: rgb(46, 45, 45);
+    font-size: 2em;
+}
+.forth-part p {
+    font-size: 12px;
+    color: grey;
+    font-family: 'Roboto', sans-serif;
+    padding-bottom: 12px;
+}
