--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@
     position: relative;
     bottom: 28px;
 }
+
 .second-part-pro .second-box-2 h4 {
     position: relative;
     left: 34%;
@@ -106,17 +107,20 @@
     position: relative;
     bottom: 1.1em;
 }
-.second-part-pro h4{
+
+.second-part-pro h4 {
     border-bottom: 2px solid rgb(71, 70, 70);
     width: 125px;
     text-align: center;
     position: relative;
     left: 30%;
 }
-.second-part-pro h4{
+
+.second-part-pro h4 {
     color: rgb(46, 45, 45);
 }
-.third-part{
+
+.third-part {
     width: 100%;
     height: 70%;
     background-color: rgb(255, 241, 241);
@@ -126,21 +130,25 @@
     align-items: center;
     color: rgb(46, 45, 45);
 }
-.third-part-1{
+
+.third-part-1 {
     position: relative;
     left: 15%;
 }
-.third-part-1 h2{
+
+.third-part-1 h2 {
     font-size: 1.8em;
     padding-bottom: 15px;
 }
-.third-part-1 p{
+
+.third-part-1 p {
     font-size: 13px;
     color: rgb(148, 144, 144);
     font-family: 'Roboto', sans-serif;
     padding-bottom: 20px;
     text-align: center;
 }
+
 .third-part-1 button {
     background-color: rgb(255, 103, 149);
     border: none;
@@ -150,30 +158,84 @@
     position: relative;
     left: 35%;
 }
-.third-part-2{
+
+.third-part-2 {
     position: relative;
     right: 10%;
-} 
-.forth-part{
+}
+
+.forth-part {
     padding: 40px 130px;
     text-align: center;
 }
-.forth-part-pro{
+
+.forth-part-pro {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 40px 150px;
     gap: 16px;
 }
+
 .forth-part h2 {
     padding-top: 50px;
     padding-bottom: 20px;
     color: rgb(46, 45, 45);
     font-size: 2em;
 }
+
 .forth-part p {
     font-size: 12px;
     color: grey;
     font-family: 'Roboto', sans-serif;
     padding-bottom: 12px;
+}
+
+.fivth-part {
+    padding: 40px 130px;
+    text-align: center;
+    background: url("Images/Flower Asset/Rectangle 9.png");
+    height: 100%;
+    background-repeat: no-repeat;
+    position: relative;
+    left: 14%;
+    text-align: center;
+    background-position: cover;
+}
+
+.fivth-part-text {
+    text-align: center;
+    align-items: center;
+    position: relative;
+    right: 15%;
+}
+
+.fivth-part-text h2 {
+    padding-top: 50px;
+    color: rgb(46, 45, 45);
+    font-size: 2em;
+}
+
+.fivth-part-text p {
+    font-size: 12px;
+    color: grey;
+    font-family: 'Roboto', sans-serif;
+    padding: 18px;
+    padding-bottom: 25px;
+}
+
+.fivth-part-text input {
+    width: 50%;
+    border: none;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+.fivth-part-text button {
+    background-color: rgb(255, 103, 149);
+    border: none;
+    color: aliceblue;
+    padding: 12px 25px;
+    border-radius: 5px;
+    margin-left: 5px;
 }
